[package]
name = "scheduler"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
async-trait = { workspace = true }
chrono = "0.4.42"
cron = "0.15.0"
serde = "1.0.228"
serde_json = "1.0.147"
thiserror = "2.0.17"
tokio = { workspace = true, features = ["sync", "rt", "time", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }
sqlx = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }

[dev-dependencies]
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
